# kursach

./: .dockerignore  .env.example  .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  project_files.txt  project_filesD.txt  run.sh  style.qrc
.github/workflows/: deploy.yml
_bak_1512/: AudioPlayer.cpp  AudioPlayer.h  AuthWindow.cpp  DatabaseManager.cpp  DatabaseManager.h  MainWindow_Pages.cpp  MainWindow_Slots.cpp  MyMusicPage.cpp  MyMusicPage.h
src/: Chorus  main.cpp
src/audio/: AudioPlayer.cpp  AudioPlayer.h  LocalFileHandler.cpp  LocalFileHandler.h  PlaybackController.cpp  PlaybackController.h  TrackWidget.cpp  TrackWidget.h
src/core/: Playlist.cpp  Playlist.h  Track.h
src/core/managers/: PlaylistManager.cpp  PlaylistManager.h  TrackManager.cpp  TrackManager.h  UserManager.cpp  UserManager.h
src/core/models/: Message.h  Room.h  Track.h  User.h
src/database/: DatabaseManager.cpp  DatabaseManager.h
src/database/api/: MusicAPIManager.cpp  MusicAPIManager.h
src/database/api/AudioPlayer/: AudioPlayer.cpp  AudioPlayer.h  TrackWidget.cpp  TrackWidget.h
src/database/migrations/: InitialSchema.sql
src/database/models/: FriendRequest.h  Playlist.h  PlaylistTracks.h  Track.h  User.h
src/database/socialNetwork/: FriendsManager.cpp  FriendsManager.h  MessagesManager.cpp  MessagesManager.h
src/gui/: .gitignore  AuthWindow.cpp  AuthWindow.h
src/gui/AuthWindow/: AuthWindow.cpp  AuthWindow.h
src/gui/AuthWindow/widgets/: LoginForm.cpp  LoginForm.h  RegisterForm.cpp  RegisterForm.h
src/gui/Frameless/: FramelessWindow.cpp  FramelessWindow.h
src/gui/MainWindow/: MainWindow.cpp  MainWindow.h  MainWindow_Avatar.cpp  MainWindow_AvatarStorage.cpp  MainWindow_AvatarUI.cpp  MainWindow_Pages.cpp  MainWindow_Slots.cpp  MainWindow_UI.cpp
src/gui/MainWindow/pages/: FriendsPage.cpp  FriendsPage.h  MessagesPage.cpp  MessagesPage.h  MyMusicPage.cpp  MyMusicPage.h  PlaylistsPage.cpp  PlaylistsPage.h  ProfilePage.cpp  ProfilePage.h  RoomsPage.cpp  RoomsPage.h  SearchMusicPage.cpp  SearchMusicPage.h
src/gui/dialogs/: NotificationDialog.cpp  NotificationDialog.h  SqlInjectionDialog.cpp  SqlInjectionDialog.h
src/gui/style/: app.qss
src/gui/widgets/: ChatWidget.cpp  ChatWidget.h  FriendCard.cpp  FriendCard.h  MessageBubble.cpp  MessageBubble.h  RoomCard.cpp  RoomCard.h  Sidebar.cpp  Sidebar.h  TrackListItem.cpp  TrackListItem.h  UserAvatar.cpp  UserAvatar.h
src/network/: ChatManager.cpp  ChatManager.h  FriendManager.cpp  FriendManager.h  RadioBrowserAPI.cpp  RadioBrowserAPI.h  RoomManager.cpp  RoomManager.h  WebSocketClient.cpp  WebSocketClient.h
src/utils/: Config.cpp  Config.h  FileUtils.cpp  FileUtils.h  ImageUtils.cpp  ImageUtils.h
styles/: styles.css
